oxiplate-derive/tests/crates/unreachable/tests/broken/unhandled-whitespace-adjustment-tag.stderr
error: Internal Oxiplate error: Unhandled whitespace adjustment tag
 --> tests/broken/unhandled-whitespace-adjustment-tag.rs:4:22
  |
4 | #[oxiplate_inline(r#"{$}"#)]
  |                      ^^^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Unhandled+whitespace+command+in+tag+end
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/unhandled-whitespace-adjustment-tag.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/unhandled-whitespace-adjustment-tag.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Data`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
